[package]
name = "wasm-micro-test2"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s" # Oz is much, much worse for some reason

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '--strip-producers',
    '-Oz',
]
